[DOC] Clarify array methods using `eql?`

[Bug #22013]

Up to a certain size, only `eql?` is used, but for larger arrays
a Hash is used an `#hash` becomes necessary.

We could consider always checking `#hash` for consistency, but
that would decrease performance.

At the very least we can clarify the documentation.